# bzlmod-pybind11-fail

./: BUILD  MODULE.bazel  README.md  add.cc  main.py
