bazel_dep(name = "rules_python", version = "0.26.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.8",
)
use_repo(python, "python_versions", "python_3_8")

bazel_dep(name = "pybind11_bazel", version = "2.11.1")
python_configure = use_extension("@pybind11_bazel//:python_configure.bzl", "extension")
python_configure.toolchain(python_interpreter_target = "@python_3_8//:python3")
use_repo(python_configure, "local_config_python", "pybind11")
